@@ -5,8 +5,7 @@ Integration of supersized in Plone4(tested) and Plone3 (untested).
 
 This version include supersized v3.2.7.
 There is a small change from the original supersized.shutter.js (the image path), and a few in the css files.
-It was made for using it with collective.plonetruegallery
-For plonetruegallyey you only need to add collective.js.supersized to your buildout, you do not need to install it.
+This product is no longer used for truegallery, use collective.ptg.supersized instead
 
 You can see the "single background image mode" by 
 - installing the product
@@ -18,6 +17,8 @@ Authors
 
 - Espen Moe-Nilssen <espen@medialog.no>
 
+
 Contributors
+============
 
 .. _supersized: http://buildinternet.com/project/supersized
